public/stylesheets/sass/layout/_reset.scss
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    vertical-align: baseline;
    background: transparent;
}
html {
    overflow-y: scroll;
    overflow-x: hidden;
}
body {
    line-height: 20px;
    font-family: 'Trebuchet MS', Helvetica, sans-serif;
    font-size: 14px;
    height: 100%;
    width: 100%;
    background-color: #BBBBBB;
    text-align: justify;
    background-image: -webkit-gradient(
      radial,
      50% 0%,
      0,
      50% 0%,
      800,
      from(#FFFFFF),
      to(#BBBBBB)
    );
    background-image: -moz-radial-gradient(
      50% 0% 270deg,
      circle cover,
      #FFFFFF 0%,
      #BBBBBB 800px
    );
    background-repeat: no-repeat;
    background-attachment: fixed;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
h1, h2, h3, h4, h5, h6 {
    letter-spacing: 1px;
}

/* remember to define focus styles! */
:focus {
    outline: 0;
}

/* remember to highlight inserts somehow! */
ins {
    text-decoration: none;
}
del {
    text-decoration: line-through;
}

/* tables still need 'cellspacing="0"' in the markup */
table {
    border-collapse: collapse;
    border-spacing: 0;
}

.break {
    clear: both;
}

